revision R2 added MECH 816 section)

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
               </p>
               <p class="about__content-details-para">
                 I completed my MASc degree at Queen's University under the supervision of
-                Amy Wu at Queen's University. My research focused on the standing balance of 
-                legged robots.
+                Amy Wu at Queen's University. My research utilizes optimal control methodologies
+                and reduced order models of legged systems to improve standing balance.
               </p>
               <p class= "about__content-details-para">
                 Outside of work I enjoy being outdoors! I am an avid paddler who enjoys
@@ -155,22 +155,27 @@
                 , specifically designing and building furnature.
               </p>
             </div>
-            <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
+            <a href="./index.html#contact" class="btn btn--med btn--theme dynamicBgClr"
               >Contact</a
             >
           </div>
           <div class="about__content-skills">
             <h3 class="about__content-title">My Skills</h3>
             <div class="skills">
-                <div class="skills__skill">Control</div>
+                <div class="skills__skill">Control System Design</div>
                 <div class="skills__skill">Dynamic Modeling</div>
+                <div class="skills__skill">Model Predictive Control</div>
                 <div class="skills__skill">MATLAB</div>
                 <div class="skills__skill">Simulink</div>
                 <div class="skills__skill">CAD</div>
+                <div class="skills__skill">Rapid Prototyping</div>
+                <div class="skills__skill">Optimization</div>
                 <div class="skills__skill">Data Analysis</div>
                 <div class="skills__skill">Python</div>
                 <div class="skills__skill">C++</div>
-                <div class="skills__skill">Rapid Prototyping</div>
+                <div class="skills__skill">Arduino</div>
+                <div class="skills__skill">Circuit Design</div>
+                <div class="skills__skill">LaTex</div>
             </div>
           </div>
         </div>
@@ -224,7 +229,7 @@
             </div>
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Dynamic Parameter Identification of CRS A465 Manipulator</h3>
-              <h3 class="projects__row-content-subtitle">Febuary-April 2022</h3>
+              <h3 class="projects__row-content-subtitle">Febuary-April 2020</h3>
               <p class="projects__row-content-desc">
                 In advanced robotic applications an accurate dynamic model is critical for designing
                 control systems, planning operations, process supervision, simulations, and training. The dynamic parameters 
@@ -238,6 +243,32 @@
               >
             </div>
           </div>
+
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/png/MECH816.png"
+                alt="CRS manipulator"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Kalman Filter for smartphone IMU</h3>
+              <h3 class="projects__row-content-subtitle">Nov - Dec 2019</h3>
+              <p class="projects__row-content-desc">
+                In the final project of graduate level course on Energetics & Mechanics of Locomotion a Kalman filter for a smartphone's IMU sensor was
+                designed to make acurate measurements of motion more accessable.
+              </p>
+              <a
+                href="./proj_MECH816.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                
+                >Learn More</a
+              >
+            </div>
+          </div>
+
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
@@ -265,6 +296,9 @@
               >
             </div>
           </div>
+
+          
+
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
@@ -280,7 +314,7 @@
               <p class="projects__row-content-desc">
                  While at completing my Masters at Queen's univerisity I was Teaching Assistant for 
                  the mechatronics courses offered by the Mechanical and Materials Enineering department.
-                 In this role I taught the theory of electromechanical systems in addition
+                 In this role I taught the theory of electro-mechanical systems in addition
                  to organizing and facilitating labs where the students get hands on experience programming 
                  microcontrollers and constructing mechatronic systems. 
               </p>
@@ -327,13 +361,7 @@
           </div>
         </div>
 
-        <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
-        <div class="main-footer__lower">
-          &copy; Copyright 2021. Thanks to 
-          <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
-            >Ram Maheshwari</a>
-            for creating the website template
-        </div>
+
       </div>
     </footer>
 
