--- a/proj_TA.html
+++ b/proj_TA.html
@@ -88,8 +88,8 @@
         <div class="project-cs-hero__info">
           <p class="text-primary">
             While working as a Teaching Assistant for the mechatronics courses my duties 
-            included teaching the course content in tutorials, running the labs where 
-            students got hand on experience working on hardware and grading submitted coursework. For my teaching in 
+            included teaching the course content in tutorials, grading submitted coursework and running the labs where 
+            students got hands on experience working on hardware. For my teaching in 
             the 2020-2021 year I was recognized with the "Dean's Teaching Assistant Award". 
 
           </p>
@@ -112,7 +112,7 @@
               <h1 class="project-details__content-subtitle-sub">Fall 2019, Fall 2020</h1>
               <p class="project-details__desc-para">
                 As TA for MECH 217 I provided students with assistance on how to use mircrocontrollers for the purpose
-                of measurements and analysis. Students learned to Identify and qantify measurement objectives in practical 
+                of measurements and analysis. Students learned to identify and quantify measurement objectives in practical 
                 engineering applications; apply statistical analysis, including uncertainty, for interpreting test results. 
                 Specify, select, and apply transducers, acquisition systems, and 2 procedures to measure pressure, strain, 
                 temperature and position using both analog and digital sesnsors.
@@ -138,13 +138,13 @@
             <div class="project-details__tools-used">
               <h3 class="project-details__content-title">Tools Used</h3>
               <div class="skills">
-                <div class="skills__skill">Microcontroller</div>
+                <div class="skills__skill">Arduino</div>
                 <div class="skills__skill">C++</div>
                 <div class="skills__skill">Python</div>
                 <div class="skills__skill">Data Analysis</div>
                 <div class="skills__skill">Soldering</div>
                 <div class="skills__skill">Ocilliscope</div>
-                <div class="skills__skill">Circuit design</div>
+                <div class="skills__skill">Circuit Design</div>
               </div>
             </div>
           
@@ -184,12 +184,6 @@
           </div>
         </div>
 
-        <div class="main-footer__lower">
-          &copy; Copyright 2021. Made by
-          <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
-            >Ram Maheshwari</a
-          >
-        </div>
       </div>
     </footer>
     <script src="./index.js"></script>
