rev R3 spelling & grammar

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            Hardworking and determined indivual with a passion for robotics. I enjoy working hands on to design and develope solutions to
+            Hardworking and determined individual with a passion for robotics. I enjoy working hands on to design and develop solutions to
             tackle complex problems. 
 
           </span>
@@ -258,7 +258,7 @@
               <h3 class="projects__row-content-subtitle">Nov - Dec 2019</h3>
               <p class="projects__row-content-desc">
                 In the final project of graduate level course on Energetics & Mechanics of Locomotion a Kalman filter for a smartphone's IMU sensor was
-                designed to make acurate measurements of motion more accessable.
+                designed to make accurate measurements of motion more accessible.
               </p>
               <a
                 href="./proj_MECH816.html"
@@ -282,11 +282,11 @@
               <h3 class="projects__row-content-title">Queen's Mostly Autonmous Sailboat Team</h3>
               <h3 class="projects__row-content-subtitle">Sept 2017 - May 2019</h3>
               <p class="projects__row-content-desc">
-                Queens Most Automous Sailboat Team (QMAST) is a student design team that 
+                Queens Mostly Automous Sailboat Team (QMAST) is a student design team that 
                 designs and builds autonomous sailboats to compete at the International 
                 Robotic Sailboat Regatta. During my undergraduate degree I was member of 
-                mechanical team, starting as a general member, then moving up to the
-                role of mechanical team manager. 
+                Mechanical Team, starting as a general member, then moving up to the
+                role of Mechanical Team Manager. 
               </p>
               <a
                 href="./proj_QMAST.html"
@@ -315,7 +315,7 @@
                  While at completing my Masters at Queen's univerisity I was Teaching Assistant for 
                  the mechatronics courses offered by the Mechanical and Materials Enineering department.
                  In this role I taught the theory of electro-mechanical systems in addition
-                 to organizing and facilitating labs where the students get hands on experience programming 
+                 to organizing and facilitating labs where the students gain hands on experience programming 
                  microcontrollers and constructing mechatronic systems. 
               </p>
               <a
