--- a/proj_ELEC848.html
+++ b/proj_ELEC848.html
@@ -126,8 +126,8 @@
                 
               </p>
               <p class="project-details__desc-para">
-                We developed the dynamic model formulation using the Euler-Lagrange formulation. This expression is 
-                nonlinear in terms of the dynamic parameters, so it is reformulated into a reduced canonical form 
+                The dynamic model was formulated using the Euler-Lagrange Equations. This expression is 
+                nonlinear in terms of the dynamic parameters, so it was reformulated into a reduced canonical form 
                 that is linear to model parameters.
               </p>
               <div class="project-details__med-img-cont">
@@ -148,9 +148,9 @@
                 </div>
                 <p class="project-details__desc-para">
                 A joint trajectory was generated such that all the 
-                identifiable parameters are continuously excited. With this trajectory we recorded three training 
-                data sets and processed the noisy joint acceleration with a gaussian filter. We performed least 
-                square regressions on all three data sets to estimate the dynamic parameters.
+                identifiable parameters are continuously excited. With this trajectory three traing data sets were recorded 
+                and the noisy joint acceleration data was processed with a gaussian filter. A least square regression was
+                performed all three data sets to estimate the dynamic parameters.
               </p>
               <div class="project-details__small-img-cont">
                 <figure>
@@ -162,9 +162,8 @@
                 </figure>
               </div>
               <p class="project-details__desc-para">
-                To validate the model, we averaged the estimated dynamic parameters from two the three training data sets.
-                The average dynamic parameters were then used to estimate the measured voltage of the third data set. We were able to 
-                predict the experimental results with an average Root Mean Square error for each joint of 0.088 Volts.
+                To validate the model, the average of the estimated dynamic parameters from two the three training data sets was used to estimate the measured voltage of 
+                the third data set. With this dynamic model, the average RMS error between the predicted voltage and measured voltage was 0.088 Volts.
               </p>
             </div>
             <div class="project-details__tools-used">
