--- a/proj_MECH816.html
+++ b/proj_MECH816.html
@@ -89,7 +89,7 @@
           <p class="text-primary">
             A Kalman Filter is a useful tool to create a probabilistic way of recursively updating a systems state from noisy measurements using a model of measurement
             process and system dynamics to minimize error. This filtering method was used on a smartphones IMU sensor to 
-            develop a way of accurately measuring body movements with the readly available sensors in our smartphones. More accessible methods of measuring body movement will 
+            develop a way of accurately measuring body movements with the readily available sensors in our smartphones. More accessible methods of measuring body movement will 
             make it easier to record and study high risk tasks for musculoskeletal injuries in remote or developing countries such as <a href ="https://pubmed.ncbi.nlm.nih.gov/15176126/"><u>handloom weavers in West Bengal</u></a>.
           </p>
         </div>
